Enable building of docs for shared repos FOLIO-903
But the link for the raml file needs to point to master of shared "raml" repo.
Later might be able to link to actual sha1.

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -11,6 +11,17 @@ okapi:
       - okapi
     ramlutil: okapi-core/src/main/raml/raml-util
 
+mod-users:
+  - label: null
+    directory: raml-util/ramls/mod-users
+    files:
+      - groups
+      - users
+      - addressTypes
+      - proxiesFor
+    ramlutil: null
+    shared: ramls/mod-users
+
 mod-circulation:
   - label: null
     directory: ramls
