Add FAQ category "Development tips"
These categories align with the categories in /guides/index

Later we can devise some better categories.

--- a/_data/faqs.yml
+++ b/_data/faqs.yml
@@ -12,6 +12,9 @@
 - name: reference
   title: Reference documentation
 
+- name: development-tips
+  title: Development tips
+
 - name: management
   title: Development management
 
