--- a/_data/api.yml
+++ b/_data/api.yml
@@ -56,6 +56,13 @@ mod-login-saml:
       - saml-login
     ramlutil: null
 
+mod-password-validator:
+  - label: null
+    directory: ramls
+    files:
+      - password-validator
+    ramlutil: ramls/raml-util
+
 mod-circulation:
   - label: null
     directory: ramls
