Add default config FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -6,6 +6,15 @@
 #
 # Leave the two tables (raml-module-builder, raml) at the bottom.
 ---
+# default: This is the standard configuration.
+# It is used by the CI jobs if config is missing.
+default:
+  - label: null
+    directory: ramls
+    files:
+      - dummy
+    ramlutil: ramls/raml-util
+
 okapi:
   - label: null
     directory: okapi-core/src/main/raml
