Update api docs config FOLIO-903
Add instance-relationship-type for mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -141,6 +141,7 @@ mod-inventory-storage:
       - instance-storage
       - instance-format
       - instance-type
+      - instance-relationship-type
       - item-storage
       - classification-type
       - contributor-type
