--- a/_data/api.yml
+++ b/_data/api.yml
@@ -142,7 +142,9 @@ mod-inventory-storage:
       - instance-format
       - instance-type
       - instance-relationship-type
+      - instance-status
       - item-storage
+      - cataloging-level
       - classification-type
       - contributor-type
       - contributor-name-type
@@ -151,10 +153,12 @@ mod-inventory-storage:
       - location
       - locationunit
       - material-type
+      - mode-of-issuance
       - platform
       - service-point
       - service-points-user
       - shelf-location
+      - statistical-code-type
     ramlutil: ramls/raml-util
 
 mod-user-import:
