Update api docs config FOLIO-903
Adjust mod-finance

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -188,9 +188,10 @@ mod-finance:
     directory: ramls
     files:
       - budget
+      - encumbrance
       - fiscal_year
+      - fund
       - fund_distribution
-      - funds
       - ledger
       - tag
       - transaction
