Update api docs config FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -79,6 +79,7 @@ mod-password-validator:
     directory: ramls
     files:
       - password-validator
+      - validator-registry
     ramlutil: ramls/raml-util
 
 mod-circulation:
