--- a/_data/api.yml
+++ b/_data/api.yml
@@ -50,6 +50,7 @@ mod-permissions:
       - tenantPermissions
       - permissions
     ramlutil: null
+    schemasDirectory: raml-util/schemas/mod-permissions
     shared: ramls/mod-permissions
 # 201809: Upcoming new config to replace the above entry
 #mod-permissions:
@@ -108,6 +109,7 @@ mod-configuration:
     files:
       - config
     ramlutil: ramls/raml-util
+    schemasDirectory: ramls/_schemas
 
 mod-inventory:
   - label: null
@@ -157,6 +159,7 @@ mod-codex-ekb:
     files:
       - codex
     ramlutil: null
+    schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
 
 mod-codex-inventory:
@@ -166,6 +169,7 @@ mod-codex-inventory:
     files:
       - codex
     ramlutil: null
+    schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
 
 mod-codex-mux:
@@ -175,6 +179,7 @@ mod-codex-mux:
     files:
       - codex
     ramlutil: null
+    schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
 
 mod-calendar:
@@ -402,16 +407,19 @@ raml:
       - tenantPermissions
       - permissions
     ramlutil: .
+    schemasDirectory: schemas/mod-permissions
   - label: shared-codex
     directory: ramls/codex
     files:
       - codex
     ramlutil: .
+    schemasDirectory: schemas/codex
   - label: tagged-record-example
     directory: ramls/tagged-record-example
     files:
       - users
     ramlutil: .
+    schemasDirectory: schemas/tagged-record-example
 
 # Leave the previous two tables (raml-module-builder, raml) at the bottom.
 # Place other entries above those.
