Denote raml1 mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -120,6 +120,7 @@ mod-inventory:
 
 mod-inventory-storage:
   - label: null
+    version1: true
     directory: ramls
     files:
       - holdings-storage
