Update api docs config FOLIO-903
mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -131,10 +131,10 @@ mod-inventory-storage:
       - instance-relationship-type
       - instance-status
       - item-storage
-      - cataloging-level
       - classification-type
       - contributor-type
       - contributor-name-type
+      - electronic-access-relationship
       - identifier-type
       - loan-type
       - location
