Denote raml1 mod-feesfines FOLIO-903
and adjust config

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -212,18 +212,20 @@ mod-finance-storage:
 
 mod-feesfines:
   - label: null
+    version1: true
     directory: ramls
     files:
       - accounts
       - comments
       - feefineactions
       - feefines
+      - manualblocks
       - owners
       - payments
       - refunds
       - transfers
       - transfertypes
-      - waives
+      - waiver
     ramlutil: ramls/raml-util
 
 mod-notes:
