Update config mod-users-bl FOLIO-903
Now standard ramls/raml-util

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -80,9 +80,7 @@ mod-users-bl:
     version1: true
     files:
       - mod-users-bl
-    excludes:
-      - raml
-    ramlutil: ramls/raml
+    ramlutil: ramls/raml-util
 
 mod-patron:
   - label: null
