--- a/_data/api.yml
+++ b/_data/api.yml
@@ -106,6 +106,7 @@ mod-codex-ekb:
     ramlutil: null
     schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
+    multiple: true
 
 mod-codex-inventory:
   - label: null
@@ -116,6 +117,7 @@ mod-codex-inventory:
     ramlutil: null
     schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
+    multiple: true
 
 mod-codex-mux:
   - label: null
@@ -126,6 +128,17 @@ mod-codex-mux:
     ramlutil: null
     schemasDirectory: ramls/raml-util/schemas/codex
     shared: ramls/codex
+
+mod-codex-mock:
+  - label: null
+    version1: true
+    directory: ramls/raml-util/ramls/codex
+    files:
+      - codex
+    ramlutil: null
+    schemasDirectory: ramls/raml-util/schemas/codex
+    shared: ramls/codex
+    multiple: true
 
 mod-circulation:
   - label: null
