Look for schemas in top-level of shared raml repo FOLIO-1447

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -496,6 +496,7 @@ raml:
     files:
       - tenant
     ramlutil: .
+    schemasDirectory: schemas
     shared: ramls
   - label: shared-mod-permissions
     version1: true
