Denote raml1 okapi FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -471,6 +471,7 @@ mod-configuration:
 
 okapi:
   - label: null
+    version1: true
     directory: okapi-core/src/main/raml
     files:
       - okapi
