Denote raml1 FOLIO-903
mod-circulation
mod-circulation-storage
mod-template-engine

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -142,6 +142,7 @@ mod-codex-mock:
 
 mod-circulation:
   - label: null
+    version1: true
     directory: ramls
     files:
       - circulation
@@ -149,6 +150,7 @@ mod-circulation:
 
 mod-circulation-storage:
   - label: null
+    version1: true
     directory: ramls
     files:
       - loan-storage
@@ -377,6 +379,7 @@ mod-event-config:
 
 mod-template-engine:
   - label: null
+    version1: true
     directory: ramls
     files:
       - template-engine
