Update apidocs config FOLIO-903
mod-inventory-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -201,6 +201,7 @@ mod-inventory-storage:
       - service-point
       - service-points-user
       - shelf-location
+      - statistical-code
       - statistical-code-type
     ramlutil: ramls/raml-util
 
