Adjust apidocs config mod-data-import FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -421,7 +421,9 @@ mod-data-import:
     directory: ramls
     files:
       - dataImport
-    ramlutil: ramls/raml-util
+    excludes:
+      - raml-storage
+    ramlutil: ramls/raml-storage/raml-util
 
 mod-data-loader:
   - label: null
