--- a/_data/api.yml
+++ b/_data/api.yml
@@ -440,7 +440,9 @@ mod-source-record-storage:
     directory: ramls
     files:
       - source-record-storage
-    ramlutil: ramls/raml-util
+    excludes:
+      - raml-storage
+    ramlutil: ramls/raml-storage/raml-util
 
 mod-source-record-manager:
   - label: null
@@ -448,7 +450,9 @@ mod-source-record-manager:
     directory: ramls
     files:
       - metadata-provider
-    ramlutil: ramls/raml-util
+    excludes:
+      - raml-storage
+    ramlutil: ramls/raml-storage/raml-util
 
 mod-rtac:
   - label: null
