--- a/_data/api.yml
+++ b/_data/api.yml
@@ -449,6 +449,7 @@ mod-source-record-manager:
     version1: true
     directory: ramls
     files:
+      - change-manager
       - metadata-provider
     excludes:
       - raml-storage
