Denote raml1 FOLIO-903
mod-calendar, mod-orders

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -279,6 +279,7 @@ mod-finance-storage:
 
 mod-orders:
   - label: null
+    version1: true
     directory: ramls
     files:
       - order
@@ -395,6 +396,7 @@ mod-template-engine:
 
 mod-calendar:
   - label: null
+    version1: true
     directory: ramls
     files:
       - calendar
