Update apidocs config FOLIO-903
mod-orders-storage

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -300,6 +300,7 @@ mod-orders-storage:
       - fund_distribution
       - license
       - location
+      - orders
       - physical
       - po_line
       - purchase_order
