Update apidocs config FOLIO-903
mod-orders-storage pieces

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -294,6 +294,7 @@ mod-orders-storage:
       - location
       - orders
       - physical
+      - pieces
       - po_line
       - purchase_order
       - renewal
